force-app/main/default/objects/EFT_Transaction_Status__c/EFT_Transaction_Status__c.object-meta.xml
<CustomObject>
    <label>EFT Transaction Status</label>
    <nameField>
        <displayFormat>ETS-{000000}</displayFormat>
        <label>EFT Transaction Status Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFT Transaction Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>