force-app/main/default/objects/EFT_Transaction_Status__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EFT Transaction Status</relationshipLabel>
    <relationshipName>EFT_Transaction_Status</relationshipName>
    <type>Lookup</type>
</CustomField>