force-app/main/default/objects/EFT_Transaction_Status__c/fields/SalesHeader__c.field-meta.xml
<CustomField>
    <fullName>SalesHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesHeader</label>
    <referenceTo>SalesHeader__c</referenceTo>
    <relationshipLabel>EFT Transaction Status</relationshipLabel>
    <relationshipName>EFT_Transaction_Status</relationshipName>
    <type>Lookup</type>
</CustomField>